Internal_Main/Internal_Main.cydsn/BUILD.log
--------------- Build Started: 04/28/2021 13:10:14 Project: Internal_Main, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\Crowling\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p C:\Users\Crowling\OneDrive\Documents\GitHub\Li-CellTesting_Script\Internal_Main\Internal_Main.cydsn\Internal_Main.cyprj -d CY8C4145LQI-PS433 -s C:\Users\Crowling\OneDrive\Documents\GitHub\Li-CellTesting_Script\Internal_Main\Internal_Main.cydsn\Generated_Source\PSoC4 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
ADD: pft.M0040: information: The following 1 pin(s) will be assigned a location by the fitter: RELAY_EN(0)
Analog Placement...
Info: plm.M0038: The pin named Shunt_Gnd(0) at location [IOP=(2)][IoId=(2)] prevents usage of special purposes: F(OA,0). (App=cydsfit)
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m0plus -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0p\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM0p\ARM_GCC_541\Debug\main.o
main.c: In function 'CellTestStart':
main.c:54:19: error: 'MyCustomISR' undeclared (first use in this function)
     isr_1_StartEx(MyCustomISR); 
                   ^
main.c:54:19: note: each undeclared identifier is reported only once for each function it appears in
main.c:56:5: warning: implicit declaration of function 'AMux_2_Start' [-Wimplicit-function-declaration]
     AMux_2_Start();
     ^
main.c: In function 'MyCustomISR':
main.c:142:26: error: 'SysInt_1_cfg' undeclared (first use in this function)
     NVIC_ClearPendingIRQ(SysInt_1_cfg.intrSrc);
                          ^
main.c:143:5: error: 'startFlag' undeclared (first use in this function)
     startFlag = 1;
     ^
main.c: In function 'main':
main.c:226:17: warning: implicit declaration of function 'AMux_2_Select' [-Wimplicit-function-declaration]
                 AMux_2_Select(2);
                 ^
main.c:177:10: warning: variable 'stopCode' set but not used [-Wunused-but-set-variable]
     int8 stopCode = 0;          // Code for determining the reason why test was stopped
          ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 04/28/2021 13:10:27 ---------------
